k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: result

spec:
  replicas: 2

  selector:
    matchLabels:
      app: result

  template:
    metadata:
      labels:
        app: result

    spec:
      containers:
      - name: result

        image: prasanna369/result:v1

        ports:
        - containerPort: 80
