k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: vote

spec:
  replicas: 2

  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
      - name: vote

        image: prasanna369/vote:v1

        ports:
        - containerPort: 80
