k8s/result-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: result-service

spec:
  selector:
    app: result

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
